# Markdown-Kit

./: .gitignore  CLAUDE.md  FUTURE.md  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-18-ui-redesign.md
docs/superpowers/specs/: 2026-06-13-md-viewer-editor-design.md  2026-06-18-ui-redesign-design.md
src/: App.tsx  index.css  main.tsx  settings.ts  styles.css  theme.tsx  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Banner.tsx  EditorPane.tsx  ErrorBanner.tsx  Navbar.tsx  PreviewPane.tsx  SettingsDialog.tsx  SettingsModal.tsx  SplitView.tsx  Toolbar.tsx  ToolbarButton.tsx  ViewModeSwitch.tsx
src/components/ui/: select.tsx  tooltip.tsx
src/hooks/: useDocument.ts  useKeyboardShortcuts.ts  useOsIntegration.ts  usePreviewTheme.ts
src/test/: App.test.tsx  Banner.test.tsx  EditorPane.test.tsx  Navbar.test.tsx  PreviewPane.test.tsx  SettingsDialog.test.tsx  Toolbar.test.tsx  fileio.test.tsx  keyboard.test.tsx  settings.test.tsx  setup.ts  theme.test.tsx  view.test.tsx
