[package]
name = "md-viewer-editor"
version = "0.1.0"
description = "A Markdown viewer and editor"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "md_viewer_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.3.0", features = [] }

[dependencies]
tauri = { version = "=2.6.2", features = [] }
tauri-plugin-opener = "=2.4.0"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# single-instance is desktop-only (no mobile support)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
