[package]
name = "markdown-kit"
version = "0.1.1"
description = "A Markdown viewer and editor"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "markdown_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-opener = "=2.5.4"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-process = "=2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# single-instance + updater are desktop-only (no mobile support)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "=2.4.2"
tauri-plugin-updater = "=2.10.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
